[gd_scene load_steps=6 format=3 uid="uid://ce1j8vik2cjbf"]

[ext_resource type="Script" path="res://scenes/birds/poopPanel.gd" id="1_sm26s"]
[ext_resource type="Texture2D" uid="uid://cyhvasqel6w36" path="res://assets/images/poop.png" id="2_8ivxn"]

[sub_resource type="Animation" id="Animation_kshxs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.3)]
}

[sub_resource type="Animation" id="Animation_u6mgj"]
resource_name = "glow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.3), Color(0.996078, 0.901961, 0, 0.301961), Color(0, 0, 0, 0.301961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tq647"]
_data = {
"RESET": SubResource("Animation_kshxs"),
"glow": SubResource("Animation_u6mgj")
}

[node name="PoopPanel" type="Node2D"]
script = ExtResource("1_sm26s")
metadata/_edit_horizontal_guides_ = [230.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 7.0
offset_top = 11.0
offset_right = 47.0
offset_bottom = 51.0
scale = Vector2(2.64, 1)
color = Color(0, 0, 0, 0.3)

[node name="poop0" type="Sprite2D" parent="."]
position = Vector2(30, 30)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_8ivxn")

[node name="poop1" type="Sprite2D" parent="."]
position = Vector2(60, 30)
scale = Vector2(0.3, 0.297036)
texture = ExtResource("2_8ivxn")

[node name="poop2" type="Sprite2D" parent="."]
position = Vector2(90, 30)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_8ivxn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tq647")
}
